[gd_scene load_steps=3 format=2]

[ext_resource path="res://HighscoreMenue.gd" type="Script" id=1]
[ext_resource path="res://MainMenuAssets/Theme_Main.tres" type="Theme" id=2]

[node name="HighscoreMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 8.0
margin_right = 1.0
margin_bottom = 8.0
script = ExtResource( 1 )

[node name="BotomAnker" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MediumAnker" type="Control" parent="."]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.4
margin_top = -116.0
margin_bottom = -116.0

[node name="VBoxContainer" type="VBoxContainer" parent="MediumAnker"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = -42.0
margin_right = 200.0
margin_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 100 )
alignment = 1

[node name="Highscore_label" type="Control" parent="MediumAnker/VBoxContainer"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
theme = ExtResource( 2 )

[node name="Button_Info_Duration" type="Button" parent="MediumAnker/VBoxContainer/Highscore_label"]
margin_left = -220.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Top Dream Durations"

[node name="Button_Info_Wecker" type="Button" parent="MediumAnker/VBoxContainer/Highscore_label"]
margin_left = 200.0
margin_top = 2.0
margin_right = 620.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Top Clock Counts"

[node name="Spacing0" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 54.0
margin_right = 400.0
margin_bottom = 68.0

[node name="Highscores_0" type="Control" parent="MediumAnker/VBoxContainer"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
theme = ExtResource( 2 )

[node name="Button_Info_Duration" type="Button" parent="MediumAnker/VBoxContainer/Highscores_0"]
margin_left = -220.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Level 1"

[node name="Button_Info_Wecker" type="Button" parent="MediumAnker/VBoxContainer/Highscores_0"]
margin_left = 200.0
margin_top = 2.0
margin_right = 620.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Level 1"

[node name="Spacing" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 126.0
margin_right = 400.0
margin_bottom = 140.0

[node name="Highscores_1" type="Control" parent="MediumAnker/VBoxContainer"]
margin_top = 144.0
margin_right = 400.0
margin_bottom = 194.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
theme = ExtResource( 2 )

[node name="Button_Info_Duration" type="Button" parent="MediumAnker/VBoxContainer/Highscores_1"]
margin_left = -220.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Level 2"

[node name="Button_Info_Wecker" type="Button" parent="MediumAnker/VBoxContainer/Highscores_1"]
margin_left = 200.0
margin_top = 2.0
margin_right = 620.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Level 2"

[node name="Spacing2" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 198.0
margin_right = 400.0
margin_bottom = 212.0

[node name="Highscores_2" type="Control" parent="MediumAnker/VBoxContainer"]
margin_top = 216.0
margin_right = 400.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../Return_Button")
theme = ExtResource( 2 )

[node name="Button_Info_Duration" type="Button" parent="MediumAnker/VBoxContainer/Highscores_2"]
margin_left = -220.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Level 3"

[node name="Button_Info_Wecker" type="Button" parent="MediumAnker/VBoxContainer/Highscores_2"]
margin_left = 200.0
margin_top = 2.0
margin_right = 620.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_top = NodePath("../../Return_Button")
theme = ExtResource( 2 )
disabled = true
toggle_mode = true
text = "Level 3"

[node name="Spacing3" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 270.0
margin_right = 400.0
margin_bottom = 284.0

[node name="Return_Reset" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 288.0
margin_right = 400.0
margin_bottom = 348.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
text = "Reset All Scores"

[node name="Spacing4" type="Label" parent="MediumAnker/VBoxContainer"]
margin_top = 352.0
margin_right = 400.0
margin_bottom = 366.0

[node name="Return_Button" type="Button" parent="MediumAnker/VBoxContainer"]
margin_top = 370.0
margin_right = 400.0
margin_bottom = 430.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
text = "Main Menu"

[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscore_label/Button_Info_Duration" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscore_label/Button_Info_Wecker" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscores_0/Button_Info_Duration" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscores_0/Button_Info_Wecker" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscores_1/Button_Info_Duration" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscores_1/Button_Info_Wecker" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscores_2/Button_Info_Duration" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Highscores_2/Button_Info_Wecker" to="." method="_on_toggle_music_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Return_Reset" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MediumAnker/VBoxContainer/Return_Button" to="." method="_on_return_button_pressed"]
